--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
+html,
+body{
+  min-height: 100vh;
+  height: 100%;
+}
+
 @font-face {
   font-family: "WorkSans";
   src: url("/fonts/WorkSans-Medium.ttf") format("ttf"),
